--- a/src/animations.css
+++ b/src/animations.css
@@ -13,6 +13,7 @@
   animation: fade-in-left 0.6s ease-out forwards;
     opacity: 0;
 }
+
 @keyframes fade-in-left {
   0% {
     opacity: 0;
@@ -21,5 +22,21 @@
   100% {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+.fade-in-up {
+  animation: fade-in-up 0.6s ease-out forwards;
+    opacity: 0;
+}
+
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
