--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@
   padding-inline: 2rem;
   
 }
+html {
+  scroll-behavior: smooth;
+}
+@utility shadow-center {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+@utility inner-shadow-center {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1), inset 0 0 30px oklch(77.7% 0.152 181.912/0.5); 
+}
