--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,39 @@
 @import "tailwindcss";
 
+@utility my-container{
+
+    width: 100%;
+
+    @media (width >= 40rem /* 640px */) {
+        max-width: 40rem /* 640px */;
+    }
+    @media (width >= 48rem /* 768px */) {
+        max-width: 48rem /* 768px */;
+    }
+    @media (width >= 64rem /* 1024px */) {
+        max-width: 64rem /* 1024px */;
+    }
+    @media (width >= 80rem /* 1280px */) {
+        max-width: 80rem /* 1280px */;
+    }
+    @media (width >= 96rem /* 1536px */) {
+        max-width: 96rem /* 1536px */;
+    }
+
+  margin-inline: auto;
+  padding-inline: 2rem;
+  @apply md:max-w-[75%] 
+
+}
+
+
+
 @utility container{
   margin-inline: auto;
   padding-inline: 2rem;
-  
 }
+
+
 
 @utility shadow-center {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
