--- a/src/index.css
+++ b/src/index.css
@@ -19,15 +19,17 @@
     @media (width >= 96rem /* 1536px */) {
         max-width: 96rem /* 1536px */;
     }
-
   margin-inline: auto;
   padding-inline: 2rem;
   @apply md:max-w-[75%] 
 
 }
 
-
-
+@utility scrollbar-hidden {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
 @utility container{
   margin-inline: auto;
   padding-inline: 2rem;
